--- a/deposito.html
+++ b/deposito.html
@@ -237,16 +237,16 @@
 
         // Mapeamento de chaves Pix para cada valor
         const pixKeys = {
-            "60": "chave-pix-60@dominio.com",
-            "160": "chave-pix-160@dominio.com",
-            "300": "chave-pix-300@dominio.com",
-            "450": "chave-pix-450@dominio.com",
-            "500": "chave-pix-500@dominio.com",
-            "650": "chave-pix-650@dominio.com",
-            "700": "chave-pix-700@dominio.com",
-            "850": "chave-pix-850@dominio.com",
-            "900": "chave-pix-900@dominio.com",
-            "1050": "chave-pix-1050@dominio.com"
+            "60": "00020101021226900014br.gov.bcb.pix2568qrcode.siliumpay.com.br/dynamic/f19a542e-d14f-40ca-9ffc-ec064e1704cd5204000053039865802BR5907RK LTDA6009Sao Paulo62070503***63041100",
+            "160": "00020101021226900014br.gov.bcb.pix2568qrcode.siliumpay.com.br/dynamic/cbfe851a-5ab1-49d1-b5cc-c9ed55722d5a5204000053039865802BR5907RK LTDA6009Sao Paulo62070503***6304C196",
+            "300": "00020101021226900014br.gov.bcb.pix2568qrcode.siliumpay.com.br/dynamic/39e1d072-d851-43d2-a055-819c8da829bc5204000053039865802BR5907RK LTDA6009Sao Paulo62070503***6304576C",
+            "450": "00020101021226900014br.gov.bcb.pix2568qrcode.siliumpay.com.br/dynamic/0511b4da-9aff-4c5f-9a97-25c19e2023755204000053039865802BR5907RK LTDA6009Sao Paulo62070503***6304716B",
+            "500": "00020101021226900014br.gov.bcb.pix2568qrcode.siliumpay.com.br/dynamic/728e1903-b52a-4ca9-aa6c-878a4f976ce35204000053039865802BR5907RK LTDA6009Sao Paulo62070503***6304347B",
+            "650": "00020101021226900014br.gov.bcb.pix2568qrcode.siliumpay.com.br/dynamic/cfba54ac-0f19-442c-a220-ea8bd23e81df5204000053039865802BR5907RK LTDA6009Sao Paulo62070503***6304A375",
+            "700": "00020101021226900014br.gov.bcb.pix2568qrcode.siliumpay.com.br/dynamic/eedcb8bc-06f6-46a9-aa3f-73a3680730bd5204000053039865802BR5907RK LTDA6009Sao Paulo62070503***6304257C",
+            "850": "00020101021226900014br.gov.bcb.pix2568qrcode.siliumpay.com.br/dynamic/3f726c7f-5cac-41b0-b125-65cbb58a99845204000053039865802BR5907RK LTDA6009Sao Paulo62070503***63041DEE",
+            "900": "00020101021226900014br.gov.bcb.pix2568qrcode.siliumpay.com.br/dynamic/8be2028a-5ad2-4482-9652-56d9d034ba905204000053039865802BR5907RK LTDA6009Sao Paulo62070503***6304508C",
+            "1050": "00020101021226900014br.gov.bcb.pix2568qrcode.siliumpay.com.br/dynamic/510e0faf-99a4-4c6a-b42f-804a81deec7a5204000053039865802BR5907RK LTDA6009Sao Paulo62070503***6304D9DB"
         };
 
         // Adiciona evento de clique para selecionar o valor
