--- a/H.html
+++ b/H.html
@@ -29,7 +29,7 @@
   <div class="notificacao">
     <span class="icone-sino">🔔</span>
     <marquee behavior="scroll" direction="left">
-     a partir de depósito ainda não está liberado por enquanto não tem na plataforma espera a liberar 
+     a partir de depósito ainda não está liberado depósitoR$60,00sucessoID75983****34 saqueR$20,00sucessoID75997***9876
     </marquee>
   </div>
 
