--- a/H.html
+++ b/H.html
@@ -29,7 +29,7 @@
   <div class="notificacao">
     <span class="icone-sino">🔔</span>
     <marquee behavior="scroll" direction="left">
-     a partir de depósito ainda não está liberado depósitoR$60,00sucessoID75983****34 saqueR$20,00sucessoID75997***9876
+    depósitoR$60,00sucessoID75983**2134 saqueR$20,00sucessoID75997**9876 depósitoR$160,00ID75985**5376 saqueR$60,00ID75984**5487
     </marquee>
   </div>
 
