--- a/ajuda.html
+++ b/ajuda.html
@@ -63,7 +63,7 @@
         <!-- Outro Grupo WhatsApp -->
         <div class="help-box">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
-            <a href="https://whatsapp.com/channel/0029Vb5EKmi2ER6gXvscS50s" target="_blank">Grupo do WhatsApp</a>
+            <a href="https://chat.whatsapp.com/FpsUGiPY6Ka2ToMKl2G7GB" target="_blank">Grupo do WhatsApp</a>
         </div>
     </div>
 
