--- a/equipe.html
+++ b/equipe.html
@@ -1,4 +1,3 @@
-<!-- CÓDIGO COMPLETO COM O LINK ATUALIZADO -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -101,6 +100,7 @@
 </div>
 
 <script>
+// Firebase configuration
 const firebaseConfig = {
   apiKey: "AIzaSyCKSKnVC8dNWmiMrNr1j4rMLfQTlOrqzVM",
   authDomain: "hinvest-f4354.firebaseapp.com",
@@ -200,10 +200,9 @@ function copiarTexto(elementId) {
 }
 
 function compartilharWhatsApp() {
-  const link = document.getElementById("codigo-link").innerText;
-  const texto = `Eu te convido a participar da plataforma H Invest! Acesse com meu código: ${link}%0A%0AVocê pode ganhar dinheiro de verdade indicando amigos e investindo com segurança.`;
-  const url = `https://api.whatsapp.com/send?text=${encodeURIComponent(texto)}`;
-  window.open(url, '_blank');
+  const mensagem = "Confira o meu código de convite no H Invest: " + meuCodigo;
+  const url = "https://wa.me/?text=" + encodeURIComponent(mensagem);
+  window.open(url, "_blank");
 }
 </script>
 </body>
